--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ MONGO_DB_USERNAME = "admin123"
 MONGO_DB_PASSWORD = "admin123"
 
 PORT = '8000'
+
+CONNECTION_STRING = "mongodb+srv://admin123:admin123@gohelpme-node-backend.le2kcot.mongodb.net/GoFundMe"
